# decodelabs_internship

./: README.md
week3_project/: CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
week3_project/configs/: config.yaml
week3_project/notebooks/: 00_project_overview_and_business_question.ipynb  01_dataset_selection_and_access.ipynb  02_data_loading_and_first_inspection.ipynb  03_metadata_and_schema_audit.ipynb  04_data_quality_checks.ipynb  05_data_cleaning_and_feature_engineering.ipynb  06_exploratory_analysis_and_sql.ipynb  07_rfm_analysis_and_segmentation.ipynb  08_leakage_control_and_split_design.ipynb  09_baseline_models.ipynb  10_advanced_models.ipynb  11_evaluation_and_statistical_inference.ipynb  12_robustness_checks_and_ablations.ipynb  13_interpretability_and_error_analysis.ipynb  14_publication_figures_and_tables.ipynb  15_report_generation.ipynb  16_limitations_and_next_steps.ipynb  17_streamlit_dashboard_preview.ipynb
week3_project/paper_or_report/: datasheet.md  graphical_abstract_notes.md  limitations.md  model_card.md  references.bib  report.md  supplementary_material.md
week3_project/scripts/: download_data.py  generate_notebooks.py  run_all.py
week3_project/src/: __init__.py  config.py  metrics.py  paths.py  preprocessing.py  rfm.py  sql_queries.py  utils.py  visualization.py
week3_project/tests/: conftest.py  test_config.py  test_metrics.py  test_preprocessing.py  test_rfm.py
week3_project/website_or_demo/: README.md  app.py
week4_project/: CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
week4_project/app_or_demo/: gradio_app.py
week4_project/configs/: config.yaml
week4_project/fedtb_nigeria.egg-info/: PKG-INFO  SOURCES.txt
week4_project/notebooks/: 00_project_overview_and_research_question.ipynb  01_dataset_selection_and_prior_work.ipynb  02_data_loading_and_first_inspection.ipynb  03_data_cleaning_and_quality_checks.ipynb  (+15 more)
(+108 files in other folders)
